@@ -1,3 +1,12 @@
+2007-02-02  Hui-May Chang  <hm.chang@apple.com>
+
+	Revert for x86 darwin:
+	2005-06-19  Uros Bizjak  <uros@kss-loka.si>
+	
+	* config/i386/i386.c (ix86_function_arg_regno_p): Put back the
+	code before the following patch under TARGET_MACHO.
+	(ix86_function_value_regno_p): Likewise.
+
 2007-02-02  Simon Martin  <simartin@users.sourceforge.net>
 
 	PR c++/28266
